# mentoring-tenth

./: README.md  db.sqlite3  manage.py  pyproject.toml
python_p10/: asgi.py  settings.py  urls.py  wsgi.py
python_p10/app/: apps.py  models.py  permissions.py  serializers.py  views.py
python_p10/app/migrations/: 0001_initial.py  0002_initial.py  0003_contributor_unique.py
python_p10/authentication/: apps.py  models.py  serializers.py  views.py
python_p10/authentication/migrations/: 0001_initial.py
